@@ -5,6 +5,14 @@ bug tracking.  They are now being tracked via Google Code at
 http://code.google.com/p/www-mechanize/issues/list
 
 
+NEXT
+------------------------------------
+[ENHANCEMENTS]
+Added $mech->text_contains(), $mech->text_like() and $mech->text_unlike()
+methods.  These check the text of an HTML page separate from the
+HTML markup.  Thanks to Ashley Pond V.
+
+
 1.28    Tue Apr 13 00:44:27 CDT 2010
 ------------------------------------
 [FIXED]
